[package]
name = "ic-scan-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.6.1"
actix-web = "4.5.1"
dotenvy = "0.15.7"
futures = "0.3.30"
image = "0.25.1"
ndarray = "0.15.6"
ort = "1.16.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
