[package]
name = "ic-scan-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.6.1"
actix-web = "4.5.1"
argon2 = "0.5.3"
chrono = "0.4.38"
dotenvy = "0.15.7"
futures = "0.3.30"
image = "0.25.1"
ndarray = "0.15.6"
ort = "=1.14.8"
sea-orm = { version = "0.12.15", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread"] }
uuid = "1.8.0"
